--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@iconify/react": "^5.2.1",
     "antd": "^5.24.5",
+    "clsx": "^2.1.1",
     "overlayscrollbars": "^2.11.1",
     "overlayscrollbars-react": "^0.5.6",
     "react": "^19.0.0",
