--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^4.11.0",
     "@eslint/js": "^9.21.0",
     "@types/node": "^22.13.14",
     "@types/react": "^19.0.10",
@@ -30,10 +31,13 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "less": "^4.3.0",
+    "mockjs": "^1.1.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "unocss": "66.0.0",
     "vite": "^6.2.0",
+    "vite-plugin-mock": "^3.0.2",
     "vite-plugin-pages": "^0.32.5"
   },
   "pnpm": {
